refactor(calendar-sync): make synchronize-by-shifts action accept an array of shift IDs and remove shift admin requirement
