# src/models/calendarSync.ts
@@ -2,8 +2,8 @@ export interface SynchronizeByGroupsRequest {
 	group_ids: string[]
 }
 
-export interface SynchronizeByShiftRequest {
-	shift_id: number
+export interface SynchronizeByShiftsRequest {
+	shift_ids: number[]
 }
 
 export type SynchronizeResponse = string[]
